[tool.poetry]
name = "trustedge"
version = "0.1.0"
description = "TrustEdge: Failure-Aware Serverless Function Orchestration on the Edge"
authors = ["Marcos Konzen <marcoskonzen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
