[tool.poetry]
name = "simulator"
version = "0.1.0"
description = "TrustEdge: Failure-Aware Serverless Function Orchestration on the Edge"
authors = ["Marcos Konzen <marcoskonzen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
edge-sim-py = {git = "https://github.com/EdgeSimPy/EdgeSimPy.git", rev = "v1.1.0"}
matplotlib = "^3.10.8"
networkx = "2.6.2"
numpy = "1.23.5"
tabulate = "^0.9.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
